# disponibilidade-dados-api

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/api/: api_models.py  app.py  database_client.py  database_models.py
src/database/: create_tables.py  docker-compose.yaml  populate_tables.py
src/disponibilidade_dados_api/: create_tables.py  populate_tables.py
