[project]
name = "disponibilidade-dados-api"
version = "0.1.0"
description = ""
authors = [
    {name = "levifreire7",email = "levifreire7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "faker (>=39.0.0,<40.0.0)"
]

[tool.poetry]
packages = [{include = "disponibilidade_dados_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
